# finwise-backend

./: .env.example  .gitignore  README.md  create_user.py  main.py  pyproject.toml
app/: __init__.py  config.py  main.py
app/db/: __init__.py  db.py  json_storage.py
app/models/: __init__.py  transaction.py  user.py
app/routers/: coaching.py  nlp.py  users.py
app/services/: __init__.py  auditor.py  autonomous_coach.py  catalyst.py  extraction_service.py  fund_suggestions.py  strategist.py  whisper_service.py
